--- a/sub/projects.html
+++ b/sub/projects.html
@@ -205,7 +205,15 @@
         /*    padding: 0 10px 0 10px;*/
         /*    display: inline-block;*/
         /*}*/
-
+        section>div>img {
+            position: absolute;
+            margin-top: -375px;
+            animation: zoomin 1s linear 1;
+            animation-delay: 0.1s;
+            visibility: hidden;
+            animation-fill-mode: forwards;
+            margin-left: 200px;
+        }
 
 
 
@@ -225,10 +233,10 @@
 
         div>ul>li>a>h2{
             /*position: absolute;*/
-            font-size: 25px;
+            font-size: 20px;
             margin-left: 1000px;
             color: white;
-            top: -10px;
+            margin-top: -10px;
             font-family: 'Lobster', cursive;
             animation: movedown 1s linear;
         }
@@ -405,15 +413,19 @@
     <ul>
         <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2001"><h2>Assignment - 01</h2></a></li>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2005/case%201.html"><h2>Assignment - 02</h2></a></li>
-        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2003"><h2>Assignment - 02</h2></a></li>
-        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2004"><h2>Assignment - 03</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2005"><h2>Assignment - 04</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2006"><h2>Assignment - 05</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2007"><h2>Assignment - 06</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index1.html"><h2>Assignment - 07</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index2.html"><h2>Assignment - 08</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2009"><h2>Assignment - 09</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2010"><h2>Assignment - 10</h2></a></li>
+        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2003"><h2>Assignment - 03</h2></a></li>
+        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2004"><h2>Assignment - 04</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2005"><h2>Assignment - 05</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2006"><h2>Assignment - 06</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2007"><h2>Assignment - 07</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index1.html"><h2>Assignment - 08</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index2.html"><h2>Assignment - 09</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2009"><h2>Assignment - 10</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2010"><h2>Assignment - 11</h2></a></li><br>
+        <li><a href="../My%20Projects/SPA/index.html"><h2>Assignment - 12 (SPA)</h2></a></li>
+        <li><a href="../My%20Projects/SPA/Animation/Case1.html"><h2>Assignment - 13 (Case 1)</h2></a></li>
+        <li><a href="../My%20Projects/SPA/Animation/Case%202.html"><h2>Assignment - 14(Case 2)</h2></a></li>
+        <li><a href="../My%20Projects/SPA/Animation/Case3.html"><h2>Assignment - 15 (Case 3)</h2></a></li>
     </ul>
 </div>
 
@@ -422,7 +434,7 @@
 
 
 <section>
-        <div><img src="../assests/images/read.png" alt="" width="800" align="center"></div>
+        <div><img src="../assests/images/read.png" alt="" width="750" align="center"></div>
 
 
 </section>
