Updated Pos file

--- a/sub/projects.html
+++ b/sub/projects.html
@@ -258,6 +258,9 @@
             color: white;
         }
 
+
+
+
         @media all and (max-width: 426px) {
             h1 {
                 color: yellow;
@@ -422,10 +425,11 @@
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index2.html"><h2>Assignment - 09</h2></a></li>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2009"><h2>Assignment - 10</h2></a></li>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2010"><h2>Assignment - 11</h2></a></li><br>
-        <li><a href="../My%20Projects/SPA/index.html"><h2>Assignment - 12 (SPA)</h2></a></li>
-        <li><a href="../My%20Projects/SPA/Animation/Case1.html"><h2>Assignment - 13 (Case 1)</h2></a></li>
-        <li><a href="../My%20Projects/SPA/Animation/Case%202.html"><h2>Assignment - 14(Case 2)</h2></a></li>
-        <li><a href="../My%20Projects/SPA/Animation/Case3.html"><h2>Assignment - 15 (Case 3)</h2></a></li>
+        <li><a href="../My%20Projects/CSS%20Frameworks/POS/index.html"><h2>Assignment - 12 (POS System)</h2></a></li>
+        <li><a href="../My%20Projects/SPA/index.html"><h2>Assignment - 13 (SPA)</h2></a></li>
+        <li><a href="../My%20Projects/SPA/Animation/Case1.html"><h2>Assignment - 14 (Case 1)</h2></a></li>
+        <li><a href="../My%20Projects/SPA/Animation/Case%202.html"><h2>Assignment - 15 (Case 2)</h2></a></li>
+        <li><a href="../My%20Projects/SPA/Animation/Case3.html"><h2>Assignment - 16 (Case 3)</h2></a></li>
     </ul>
 </div>
 
