--- a/My Projects/SPA/index.html
+++ b/My Projects/SPA/index.html
@@ -769,6 +769,7 @@
 <script src="controller/ItemController.js"></script>
 <script src="controller/OrderController.js"></script>
 <script src="db/DB.js"></script>
+<script src="model/CustomerDTO.js"></script>
 
 
 <script>
