Updated item controller

--- a/My Projects/SPA/index.html
+++ b/My Projects/SPA/index.html
@@ -770,7 +770,7 @@
 <script src="controller/OrderController.js"></script>
 <script src="db/DB.js"></script>
 <script src="model/CustomerDTO.js"></script>
-
+<script src="model/ItemDTO.js"></script>
 
 <script>
 
@@ -1020,7 +1020,6 @@
     //     checkIfValid();
     // });
     // customer form validation end
-
 
 
     // item form
